# full_project_fastapi

./: .env  Dockerfile  _.txt  alembic.ini  app.sh  command.sh  connection.py  connection.py.bak  docker-compose.yaml  kafka_message.py  logger.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  settings_.py  test_main.py  tests.sh  user_db.sql
alembic/: env.py
alembic/versions/: 662fda2395d1_добавление_данных.py  8b836ddf29d3_создание_таблицы.py  8cd4c1812e81_добавление_еще_данных.py
commands/: tests.sh
init/: env.py
init/versions/: 2023_10_02_1608-cdad032fc08f_начало.py  2023_10_02_1613-8e806cd249aa_add_test_column.py
sender/: .env  base.py  connection.py  database.py  main.py  models.py  schemas.py  test_main.py
tests/: test_main.py
