[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Alex <kudinov-ao@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.21"
pydantic = "^2.3.0"
fastapi = "^0.103.1"
asyncpg = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
