[tool.poetry]
name = "sender"
version = "0.1.0"
description = ""
authors = ["Alex <kudinov-ao@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "0.23.2"
asyncpg = "0.28.0"
fastapi = "0.103.1"
pytest = "7.4.0"
httpx = "0.25.0"
alembic = "1.12.0"
python-dotenv = "1.0.0"
pydantic = "2.4.2"
pydantic-settings = "2.0.3"
sqlalchemy = "2.0.21"
kafka-python = "^2.0.2"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
